# url_shortener

./: LICENSE  README.md  docker-compose.yaml
api/: .flake8  .gitignore  README.MD  db.sqlite3  pyproject.toml
api/config/: settings.py  swagger_settings.py  urls.py
api/postman_collections/: URL Shortener Heroku.postman_collection.json  URL Shortener Local.postman_collection.json
api/schemas/: URL Shortener API.yaml
api/shortener/: models.py  serializers.py  urls.py  views.py
api/shortener/migrations/: 0001_initial.py
api/users/: models.py
envs/: api.default.env  redis.default.env
