[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Bartosz Baran <bartosz.baran192@gmail.com>"]
license = "Beerware"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
pytest = "7.3.1"
pytest-django = "4.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "test.settings"
python_files = ["test_*.py"]
